--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
     "classnames": "^2.5.1",
+    "overlayscrollbars": "^2.10.0",
+    "overlayscrollbars-react": "^0.5.6",
     "postcss": "^8.4.47",
+    "rc-pagination": "^4.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-lazyload": "^3.2.1",
+    "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
@@ -50,6 +54,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-lazyload": "^3.2.3",
     "tailwindcss": "^3.4.14"
   }
 }
