--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "rc-pagination": "^4.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
     "react-lazyload": "^3.2.1",
     "react-loading-skeleton": "^3.5.0",
