--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "overlayscrollbars": "^2.10.0",
     "overlayscrollbars-react": "^0.5.6",
     "postcss": "^8.4.47",
+    "rc-drawer": "^7.2.0",
     "rc-pagination": "^4.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -27,12 +28,13 @@
     "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.6",
     "react-use": "^17.5.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
