--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
     "classnames": "^2.5.1",
+    "lodash": "^4.17.21",
     "overlayscrollbars": "^2.10.0",
     "overlayscrollbars-react": "^0.5.6",
     "postcss": "^8.4.47",
     "rc-drawer": "^7.2.0",
     "rc-pagination": "^4.3.0",
+    "rc-rate": "^2.13.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
@@ -59,6 +61,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.13",
     "@types/react-lazyload": "^3.2.3",
     "tailwindcss": "^3.4.14"
   }
