--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "rc-pagination": "^4.3.0",
     "rc-rate": "^2.13.0",
     "react": "^18.3.1",
+    "react-countdown": "^2.3.6",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
