--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@stripe/react-stripe-js": "^2.8.1",
+    "@stripe/stripe-js": "^4.10.0",
     "@headlessui/react": "^2.2.0",
     "@tanstack/react-query": "^5.59.19",
     "@testing-library/jest-dom": "^5.17.0",
