--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "react-toastify": "^10.0.6",
     "react-use": "^17.5.1",
     "swiper": "^11.1.14",
-    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -68,6 +67,7 @@
   "devDependencies": {
     "@types/lodash": "^4.17.13",
     "@types/react-lazyload": "^3.2.3",
-    "tailwindcss": "^3.4.14"
+    "tailwindcss": "^3.4.14",
+    "typescript": "^5.2.3"
   }
 }
