--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
+    "react-intersection-observer": "^9.13.1",
     "react-lazyload": "^3.2.1",
     "react-loading-skeleton": "^3.5.0",
     "react-redux": "^9.1.2",
