--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
+    "react-slider": "^2.0.6",
     "react-toastify": "^10.0.6",
     "react-use": "^17.5.1",
     "swiper": "^11.1.14",
@@ -68,6 +69,7 @@
   "devDependencies": {
     "@types/lodash": "^4.17.13",
     "@types/react-lazyload": "^3.2.3",
+    "@types/react-slider": "^1.3.6",
     "tailwindcss": "^3.4.14",
     "typescript": "^4.9.5"
   }
