--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,4 @@
 REACT_APP_API_URL=https://dummyjson.com
 REACT_APP_STRIPE_PUBLIC_KEY=pk_test_TYooMQauvdEDq54NiTphI7jx
 REACT_APP_APP_NAME=MyReactApp
+REACT_APP_WEBSITE_URL=http://localhost:3000
