update produt detail

--- a/package.json
+++ b/package.json
@@ -7,16 +7,16 @@
     "@reduxjs/toolkit": "^2.3.0",
     "@stripe/react-stripe-js": "^2.8.1",
     "@stripe/stripe-js": "^4.10.0",
-    "@tanstack/react-query": "^5.62.2",
+    "@tanstack/react-query": "^5.62.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.118",
-    "@types/react": "^18.3.12",
+    "@types/react": "^18.3.16",
     "@types/react-dom": "^18.3.1",
     "autoprefixer": "^10.4.20",
-    "axios": "^1.7.7",
+    "axios": "^1.7.9",
     "classnames": "^2.5.1",
     "lodash": "^4.17.21",
     "overlayscrollbars": "^2.10.0",
@@ -41,7 +41,8 @@
     "react-use": "^17.5.1",
     "swiper": "^11.1.14",
     "web-vitals": "^2.1.4",
-    "jotai": "^2.10.3"
+    "jotai": "^2.10.3",
+    "yet-another-react-lightbox": "^3.21.7"
   },
   "scripts": {
     "dev": "react-scripts start",
