update topbar showcart

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@stripe/react-stripe-js": "^2.8.1",
     "@stripe/stripe-js": "^4.10.0",
     "@tanstack/react-query": "^5.62.7",
+    "@tanstack/react-query-devtools": "^5.62.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -18,6 +19,7 @@
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
     "classnames": "^2.5.1",
+    "jotai": "^2.10.3",
     "lodash": "^4.17.21",
     "overlayscrollbars": "^2.10.0",
     "overlayscrollbars-react": "^0.5.6",
@@ -41,7 +43,6 @@
     "react-use": "^17.5.1",
     "swiper": "^11.1.14",
     "web-vitals": "^2.1.4",
-    "jotai": "^2.10.3",
     "yet-another-react-lightbox": "^3.21.7"
   },
   "scripts": {
